# hugepages

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/hugepages/: __init__.py  hugepages.py
tests/: test_cli.py
